--- a/big-data-hadoop/pom.xml
+++ b/big-data-hadoop/pom.xml
@@ -11,7 +11,18 @@
   <artifactId>big-data-hadoop</artifactId>
   <name>big-data-hadoop</name>
   <version>${big-data-hadoop.version}</version>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 
   <dependencies>
