--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <scopt.version>3.3.0</scopt.version>
         <typesafe-config.version>1.3.0</typesafe-config.version>
         <hbase.version>1.2.0</hbase.version>
+        <hive.version>1.2.1</hive.version>
     </properties>
 
 
