--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,16 @@
         <scala.binary.version>2.11</scala.binary.version>
 
         <!-- Apache Spark -->
-        <spark.version>2.1.0</spark.version>
+        <spark.version>2.3.1</spark.version>
         <hadoop.version>2.6.0</hadoop.version>
         <!-- Thirty Party -->
         <scopt.version>3.3.0</scopt.version>
         <typesafe-config.version>1.3.0</typesafe-config.version>
         <hbase.version>1.2.0</hbase.version>
         <hive.version>1.2.1</hive.version>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
@@ -68,5 +71,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
 
 </project>
