--- a/big-data-scala/pom.xml
+++ b/big-data-scala/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>com.huyong.bigdata</groupId>
   <artifactId>big-data-scala</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <dependencies>
 
     <dependency>
@@ -31,7 +31,7 @@
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_${scala.binary.version}</artifactId>
+      <artifactId>spark-core_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
 
@@ -39,7 +39,7 @@
     <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_${scala.binary.version}</artifactId>
+      <artifactId>spark-sql_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
 
@@ -47,23 +47,33 @@
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-hive_${scala.binary.version}</artifactId>
+      <artifactId>spark-hive_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
 
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+      <artifactId>spark-streaming_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
 
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
+      <artifactId>spark-streaming-kafka-0-10_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/io.searchbox/jest -->
+    <dependency>
+      <groupId>io.searchbox</groupId>
+      <artifactId>jest</artifactId>
+      <version>5.3.3</version>
+    </dependency>
+
+
 
   </dependencies>
 
@@ -75,7 +85,7 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>${scala.binary.version}</version>
+        <version>${scala.compat.version}</version>
         <executions>
           <execution>
             <goals>
