--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <!-- Languages -->
         <java.version>1.8</java.version>
         <scala.version>2.11.8</scala.version>
-        <scala.binary.version>2.11</scala.binary.version>
+        <scala.compat.version>2.11</scala.compat.version>
 
         <!-- Apache Spark -->
         <spark.version>2.3.1</spark.version>
@@ -34,6 +34,9 @@
         <typesafe-config.version>1.3.0</typesafe-config.version>
         <hbase.version>1.2.0</hbase.version>
         <hive.version>1.2.1</hive.version>
+        <log4j.version>1.2.17</log4j.version>
+        <fastjson.version>1.2.62</fastjson.version>
+        <jedis.version>2.9.0</jedis.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -43,6 +46,16 @@
 
 
     <dependencies>
+
+
+        <!-- 加入log4j支持 -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>mysql</groupId>
@@ -61,6 +74,24 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
+        </dependency>
+
+
+
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
 
 
